2005-12-05  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkstripchart.c: Added ftk_stripchart_set_readout_rgb_e(),
	ftk_stripchart_set_readout_rgb(),
	ftk_stripchart_set_chart_rgb_e(), and ftk_stripchart_set_chart_rgb
	to allow the user to set the readout color or both background and
	readout simultaneously.
	* src/widgets/ftkstripchart.h: Added fcndefs for above.
	* test/widget/tstripchart.c: Added tests for above.
	* src/java/com/redhat/ftk/Stripchart.java: Added method
	setReadoutRGB and setChartRGB using above fcns. 
	* src/jni/com_redhat_ftk_Stripchart.c: Added jni for above fcns.
	* test/wrapper/StripchartTest.java: Add test for above methods.

2005-12-04  Chris Moller  <moller@mollerware.com>

	* src/java/com/redhat/ftk/Stripchart.java: Added method
	setBackgroundRGB using ftk_stripchart_set_bg_rgb().
	* src/jni/com_redhat_ftk_Stripchart.c: Added jni for
	ftk_stripchart_set_bg_rgb().
	* test/wrapper/StripchartTest.java: Add test for setBackgroundRGB.

2005-12-03  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkstripchart.c: Added ftk_stripchart_set_bg_rgb_e()
	and ftk_stripchart_set_bg_rgb() to allow the user to set the
	background color of the chart.
	* src/widgets/ftkstripchart.h: Added fcndefs for above.
	* test/widget/tstripchart.c: Added tests for above.

2005-12-02  Sami Wagiaalla  <swagiaal@redhat.com>

	* src/java/com/redhat/ftk/Stripchart.java: Changed createEvent to
	return the id of the added event (patch provided by Chris Moller
	<moller@mollerware.com>) 
	* src/widgets/ftkstripchart.c: patch provided by Chris Moller
	<moller@mollerware.com> 
	* Makefile.am: Replaced hardcoded classpath arguments with appropriate
	environment variables.

2005-11-29  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkconsole.c: Add console widget.
	* src/widgets/ftkconsole.h: Add console widget.
	* src/widgets/Makefile:     Add console widget to local build.
	* test/widget/tconsole.c:   Add console widget test.